logs/djhcup-reporting.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djhcup_reporting'...
Listing './lib/python3.5/site-packages/djhcup_reporting/management'...
Listing './lib/python3.5/site-packages/djhcup_reporting/management/commands'...
Compiling './lib/python3.5/site-packages/djhcup_reporting/models.py'...
***   File "./lib/python3.5/site-packages/djhcup_reporting/models.py", line 293
    print q.statement
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/djhcup_reporting/static'...
Listing './lib/python3.5/site-packages/djhcup_reporting/static/js'...
Listing './lib/python3.5/site-packages/djhcup_reporting/static/js/jqueryui'...
Listing './lib/python3.5/site-packages/djhcup_reporting/static/js/jqueryui/external'...
Listing './lib/python3.5/site-packages/djhcup_reporting/static/js/jqueryui/external/jquery'...
Listing './lib/python3.5/site-packages/djhcup_reporting/static/js/jqueryui/images'...
Listing './lib/python3.5/site-packages/djhcup_reporting/templates'...
Listing './lib/python3.5/site-packages/djhcup_reporting/templates/emails'...
Listing './lib/python3.5/site-packages/djhcup_reporting/utils'...
Listing './lib/python3.5/site-packages/djhcup_reporting-0.20150403.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
